# ag402

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  devnet_buyer_test.py  index.html  issues-ag402.md  llms.txt
.claude/skills/buy/: SKILL.md
.claude/skills/releasing-to-pypi/: SKILL.md
.claude/skills/sell/: SKILL.md
.github/workflows/: ci.yml  pip-audit.yml  scorecard.yml  security.yml  semgrep.yml  trivy.yml
adapters/claude_code/: pyproject.toml
adapters/claude_code/ag402_claude/: __init__.py  hook.py
adapters/client_mcp/: pyproject.toml
adapters/client_mcp/ag402_client_mcp/: __init__.py
adapters/client_mcp/tests/: test_server.py
adapters/mcp/: pyproject.toml
adapters/mcp/ag402_mcp/: __init__.py  gateway.py
adapters/openclaw/: pyproject.toml
adapters/openclaw/ag402-skill/: README.md  SECURITY.md  prepaid_client.py  prepaid_models.py  prepaid_server.py  skill.py
adapters/openclaw/ag402-skill/PRDs/: ag402_prepaid_prd.md
adapters/openclaw/ag402-skill/PRPs/: PRP-ag402_prepaid-phase-1.md  PRP-ag402_prepaid-phase-2.md  PRP-ag402_prepaid-phase-3.md  PRP-ag402_prepaid-phase-4.md
adapters/openclaw/ag402-skill/PRPs/planning/: ag402_prepaid-phase-1_analysis.md
adapters/openclaw/ag402-skill/references/: commands.md
adapters/openclaw/ag402_openclaw/: __init__.py  bridge.py
core/: pyproject.toml
core/ag402_core/: __init__.py  cli.py  config.py  delivery_worker.py  env_manager.py  monkey.py  setup_wizard.py
core/ag402_core/middleware/: x402_middleware.py
core/ag402_core/payment/: registry.py
core/ag402_core/security/: replay_guard.py
core/ag402_core/wallet/: payment_order.py
core/tests/: conftest_devnet.py  test_issue_fixes.py  test_monkey.py  test_receipt_reuse.py  test_security_tdd_p0.py  test_security_tdd_p1.py  test_security_tdd_p2.py  test_solana_resilience.py
docs/: architecture_state.md
examples/: ag402_quickstart.ipynb
protocol/: pyproject.toml
protocol/open402/: __init__.py
security/: VULNERABILITY_REPORT.md
