[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open402"
version = "0.1.11"
description = "Reference implementation of the x402 payment protocol for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ag402 Team" }]
keywords = ["x402", "payment", "protocol", "ai-agent", "http-402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AetherCore-Dev/ag402"
Documentation = "https://github.com/AetherCore-Dev/ag402#readme"
Repository = "https://github.com/AetherCore-Dev/ag402"
Issues = "https://github.com/AetherCore-Dev/ag402/issues"
Changelog = "https://github.com/AetherCore-Dev/ag402/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "ruff>=0.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["open402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
