[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag402-claude"
version = "0.1.9"
description = "Ag402 adapter for Claude Code — automatic x402 payment via Claude Code hooks"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ag402 Team" }]
dependencies = [
    "ag402-core>=0.1.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AetherCore-Dev/ag402"
Documentation = "https://github.com/AetherCore-Dev/ag402#readme"
Repository = "https://github.com/AetherCore-Dev/ag402"
Issues = "https://github.com/AetherCore-Dev/ag402/issues"
Changelog = "https://github.com/AetherCore-Dev/ag402/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[project.scripts]
ag402-claude-hook = "ag402_claude.hook:main"

[tool.hatch.build.targets.wheel]
packages = ["ag402_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
