[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag402-client-mcp"
version = "0.1.11"
description = "Ag402 MCP Client — expose x402 auto-payment as MCP Tools for Claude Code, Cursor, OpenClaw and more"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ag402-core>=0.1.0",
    "mcp>=1.0.0,<3.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AetherCore-Dev/ag402"
Documentation = "https://github.com/AetherCore-Dev/ag402#readme"
Repository = "https://github.com/AetherCore-Dev/ag402"
Issues = "https://github.com/AetherCore-Dev/ag402/issues"
Changelog = "https://github.com/AetherCore-Dev/ag402/blob/main/CHANGELOG.md"

[project.scripts]
ag402-mcp-client = "ag402_client_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ag402_client_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
