[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag402-mcp"
version = "0.1.11"
description = "HTTP payment gateway adapter for Ag402 — wraps any API with x402 payment verification"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ag402 Team" }]
dependencies = [
    "ag402-core>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AetherCore-Dev/ag402"
Documentation = "https://github.com/AetherCore-Dev/ag402#readme"
Repository = "https://github.com/AetherCore-Dev/ag402"
Issues = "https://github.com/AetherCore-Dev/ag402/issues"
Changelog = "https://github.com/AetherCore-Dev/ag402/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "ruff>=0.3.0"]

[project.scripts]
ag402-gateway = "ag402_mcp.gateway:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["ag402_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
