[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag402-openclaw"
version = "0.1.9"
description = "Ag402 adapter for OpenClaw — automatic x402 payment via mcporter bridge"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ag402 Team" }]
dependencies = [
    "ag402-core>=0.1.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AetherCore-Dev/ag402"
Documentation = "https://github.com/AetherCore-Dev/ag402#readme"
Repository = "https://github.com/AetherCore-Dev/ag402"
Issues = "https://github.com/AetherCore-Dev/ag402/issues"
Changelog = "https://github.com/AetherCore-Dev/ag402/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[project.scripts]
ag402-openclaw = "ag402_openclaw.bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["ag402_openclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
